# Forecast-app

./: .gitignore  CMakeLists.txt  README.md
external_include/: multi_threads.h  weather.h
front_end/: Makefile
front_end/include/: app_getinfo.h  app_menu.h  app_textfield.h  app_userinfo.h  app_window.h  tools.h
front_end/src/: app_getinfo.cpp  app_menu.cpp  app_textfield.cpp  app_window.cpp  main.cpp
http_request/: http_request.cpp  http_request.h  main.cpp
parsing/: Makefile  a.out
parsing/include/: http_request.h  weather.h
parsing/src/: json_parsing.cpp  main.cpp  weather.cpp
server/: CMakeLists.txt
server/include/: database.h  http_request.h  json_parsing.h
server/src/: create_bd.sql  database.cpp  http_request.cpp  json_parsing.cpp  main.cpp  weather.cpp
src/: main.cpp  multi_threads.cpp
